--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios-mock-adapter": "^1.16.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^6.0.2"
+    "mocha": "^6.0.2",
+    "nyc": "^13.3.0"
   }
 }
