--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chai-as-promised": "^7.1.1",
     "eslint": "^5.15.3",
     "mocha": "^6.0.2",
-    "nyc": "^13.3.0"
+    "nyc": "^13.3.0",
+    "sinon": "^7.3.0"
   }
 }
