--- a/package.json
+++ b/package.json
@@ -18,18 +18,22 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "cache-manager": "^2.9.0",
+    "cache-manager": "^2.10.1",
     "cache-manager-fs-hash": "0.0.7",
     "cli-table3": "^0.5.1",
-    "commander": "^2.20.0"
+    "commander": "^2.20.3"
   },
   "devDependencies": {
     "axios-mock-adapter": "^1.17.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^5.16.0",
-    "mocha": "^6.0.2",
-    "nyc": "^13.3.0",
+    "mocha": "^6.2.2",
+    "nyc": "^15.0.0",
     "sinon": "^7.5.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/jameswillock/prost.git"
   }
 }
