--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prost",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Formula 1 statistics on the command line",
   "main": "index.js",
   "scripts": {
@@ -18,19 +18,19 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "cache-manager": "^3.2.0",
-    "cache-manager-fs-hash": "0.0.7",
-    "cli-table3": "^0.5.1",
-    "commander": "^5.0.0"
+    "cache-manager": "^3.3.0",
+    "cache-manager-fs-hash": "^0.0.8",
+    "cli-table3": "^0.6.0",
+    "commander": "^5.1.0"
   },
   "devDependencies": {
-    "axios-mock-adapter": "^1.17.0",
+    "axios-mock-adapter": "^1.18.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^6.8.0",
-    "mocha": "^7.1.0",
-    "nyc": "^15.0.0",
-    "sinon": "^9.0.1"
+    "eslint": "^7.2.0",
+    "mocha": "^7.2.0",
+    "nyc": "^15.1.0",
+    "sinon": "^9.0.2"
   },
   "repository": {
     "type": "git",
