--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "prost": "./index.js",
-    "test": "mocha --recursive test",
-    "eslint": "eslint ./ --format table"
+    "test": "nyc --reporter=lcovonly --cache=false mocha --recursive",
+    "prettier": "prettier . --check !.nyc_output !.cache",
+    "lint": "eslint ."
   },
   "keywords": [
     "formula-1"
@@ -29,8 +30,11 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^7.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "mocha": "^8.0.1",
     "nyc": "^15.1.0",
+    "prettier": "^2.0.5",
     "sinon": "^9.0.2"
   },
   "repository": {
