--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,27 +3,39 @@ on: [push, pull_request]
 jobs:
   test:
     name: Node.js ${{ matrix.node-version }} on ${{ matrix.os }}
-    env:
-      TEST_MODE: true
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         node-version: [10.x, 12.x, 14.x]
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Install npm dependencies
-      run: npm ci
-    - name: Lint
-      run: npm run eslint
-    - name: Run tests, check code coverage
-      run: ./node_modules/.bin/nyc --reporter=clover --cache=false npm test
-    - name: Upload code coverage
-      uses: codecov/codecov-action@v1
-      with:
-        file: ./coverage/clover.xml
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install npm dependencies
+        run: npm ci
+      - name: Lint
+        run: npm run lint
+      - name: Run tests
+        run: npm test
+        env:
+          TEST_MODE: true
+      - name: Coveralls (parallel)
+        uses: coverallsapp/github-action@v1.1.1
+        env:
+          COVERALLS_FLAG_NAME: run-${{ matrix.test_number }}
+        with:
+          github-token: ${{ secrets.github_token }}
+          parallel: true
+  finish:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Coveralls finished
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.github_token }}
+          parallel-finished: true
