--- a/package.json
+++ b/package.json
@@ -19,23 +19,24 @@
     "prost": "./index.js"
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "cache-manager": "^3.4.3",
+    "axios": "^0.27.1",
+    "cache-manager": "^3.6.1",
     "cache-manager-fs-hash": "1.0.0",
-    "cli-table3": "^0.6.0",
-    "commander": "^8.3.0"
+    "cli-table3": "^0.6.2",
+    "commander": "^9.2.0",
+    "npm": "^8.7.0"
   },
   "devDependencies": {
-    "axios-mock-adapter": "^1.19.0",
-    "chai": "^4.3.4",
+    "axios-mock-adapter": "^1.20.0",
+    "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^8.2.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "mocha": "^9.1.3",
+    "mocha": "^9.2.2",
     "nyc": "^15.1.0",
-    "prettier": "^2.3.0",
-    "sinon": "^12.0.1"
+    "prettier": "^2.6.2",
+    "sinon": "^13.0.2"
   },
   "repository": {
     "type": "git",
