--- a/package.json
+++ b/package.json
@@ -19,24 +19,23 @@
     "prost": "./index.js"
   },
   "dependencies": {
-    "axios": "^0.27.1",
-    "cache-manager": "^3.6.1",
-    "cache-manager-fs-hash": "1.0.0",
-    "cli-table3": "^0.6.2",
-    "commander": "^9.2.0",
-    "npm": "^8.7.0"
+    "axios": "^1.13.2",
+    "cache-manager": "^7.2.4",
+    "cache-manager-fs-hash": "3.0.0",
+    "cli-table3": "^0.6.5",
+    "commander": "^14.0.2"
   },
   "devDependencies": {
-    "axios-mock-adapter": "^1.20.0",
-    "chai": "^4.3.6",
-    "chai-as-promised": "^7.1.1",
-    "eslint": "^8.14.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "mocha": "^9.2.2",
-    "nyc": "^15.1.0",
-    "prettier": "^2.6.2",
-    "sinon": "^13.0.2"
+    "axios-mock-adapter": "^2.1.0",
+    "chai": "^6.2.1",
+    "chai-as-promised": "^8.0.2",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "mocha": "^11.7.5",
+    "nyc": "^17.1.0",
+    "prettier": "^3.6.2",
+    "sinon": "^21.0.0"
   },
   "repository": {
     "type": "git",
