--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jameswillock/prost",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Formula 1 statistics on the command line",
   "main": "index.js",
   "type": "module",
@@ -27,12 +27,16 @@
     "keyv-file": "^5.3.3"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.39.1",
+    "@stylistic/eslint-plugin": "^5.5.0",
     "axios-mock-adapter": "^2.1.0",
     "chai": "^6.2.1",
     "chai-as-promised": "^8.0.2",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.5.0",
     "mocha": "^11.7.5",
     "nyc": "^17.1.0",
     "prettier": "^3.6.2",
