--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,19 +23,17 @@ jobs:
         run: npm test
         env:
           TEST_MODE: true
-      - name: Coveralls (parallel)
-        uses: coverallsapp/github-action@v1.1.1
-        env:
-          COVERALLS_FLAG_NAME: run-${{ matrix.test_number }}
+      - name: Coveralls Parallel
+        uses: coverallsapp/github-action@v2
         with:
-          github-token: ${{ secrets.github_token }}
+          flag-name: run-${{ join(matrix.*, '-') }}
           parallel: true
   finish:
     needs: test
+    if: ${{ always() }}
     runs-on: ubuntu-latest
     steps:
-      - name: Coveralls finished
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.github_token }}
-          parallel-finished: true
+    - name: Coveralls Finished
+      uses: coverallsapp/github-action@v2
+      with:
+        parallel-finished: true
