--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "prost": "./index.js",
-    "test": "nyc --reporter=lcovonly --cache=false mocha --recursive",
+    "test": "c8 --all mocha test/lib/**.test.js",
     "prettier": "prettier . --check !.nyc_output !.cache",
     "lint": "eslint ."
   },
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "c8": "^10.1.3",
     "cli-table3": "^0.6.5",
     "commander": "^14.0.2",
     "keyv": "^5.5.4",
@@ -33,12 +34,13 @@
     "axios-mock-adapter": "^2.1.0",
     "chai": "^6.2.1",
     "chai-as-promised": "^8.0.2",
+    "coveralls-next": "^6.0.0",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.5.0",
     "mocha": "^11.7.5",
-    "nyc": "^17.1.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "prettier": "^3.6.2",
     "sinon": "^21.0.0"
   },
