--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "prost": "./index.js",
-    "test": "c8 --all --reporter lcovonly mocha test/lib/**.test.js",
-    "prettier": "prettier . --check !.nyc_output !.cache",
+    "test": "c8 --all --reporter lcovonly --reporter text mocha test/lib/**.test.js",
     "lint": "eslint ."
   },
   "keywords": [
@@ -28,21 +27,13 @@
     "keyv-file": "^5.3.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.39.1",
     "@stylistic/eslint-plugin": "^5.5.0",
     "axios-mock-adapter": "^2.1.0",
     "chai": "^6.2.1",
     "chai-as-promised": "^8.0.2",
-    "coveralls-next": "^6.0.0",
     "eslint": "^9.39.1",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "globals": "^16.5.0",
     "mocha": "^11.7.5",
-    "mocha-lcov-reporter": "^1.3.0",
-    "prettier": "^3.6.2",
-    "sinon": "^21.0.0"
+    "mocha-lcov-reporter": "^1.3.0"
   },
   "repository": {
     "type": "git",
